--- a/caffeine_corner/templates/welcome.html
+++ b/caffeine_corner/templates/welcome.html
@@ -30,7 +30,7 @@
             <p class="font-arial text-[18px] sm:text-[28px] text-sm sm:text-md text-white m-5 sm:m-10">This is the official website of Caffeine Corner the Coffee shop based in Garcia Hernandez Bohol. You can buy a product by visiting their shop and online shopping by visiting this website.</p>
             <div class="flex flex-col gap-y-5 sm:flex-row sm:gap-80 justify-center mt-5 sm:mt-20">
                 <a href="#" class="bg-white text-coffee py-2 sm:py-3 sm:px-7 rounded-4xl text-lg sm:text-2xl font-bold transform transition duration-300 hover:scale-110">Get Started</a>
-                <a href="#" class="bg-coffee text-white py-2 sm:py-3 sm:px-12 rounded-4xl text-lg sm:text-2xl font-bold border-2 border-white transform transition duration-300 hover:scale-110">Sign In</a>
+                <a href="#" class="bg-coffee text-white py-2 sm:py-3 sm:px-12 rounded-4xl text-lg sm:text-2xl font-bold border-2 border-white transform transition duration-300 hover:scale-110">Sign Up</a>
             </div>
         </div>
     </div>
