--- a/caffeine_corner/templates/home/homepage.html
+++ b/caffeine_corner/templates/home/homepage.html
@@ -3,5 +3,5 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    
+    <h1 class="text-2xl font-bold">Welcome to Caffeine Corner</h1>
 {% endblock %}
